--- a/YouTubeDownloaderPlus/YouTubeDownloaderPlus.csproj
+++ b/YouTubeDownloaderPlus/YouTubeDownloaderPlus.csproj
@@ -87,6 +87,9 @@
     <Content Include="YouTubeDownloader\YouTubeDownloader.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(ProjectDir)YouTubeDownloader\ffmpeg.exe $(TargetDir)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
